# python-agent-robot

./: .gitignore  README.md  pyproject.toml
examples/: example.robot
src/robotframework_zebrunner/: __init__.py  ci_loaders.py  context.py  errors.py  library.py  listener.py  logs.py  selenium_integration.py  settings.py  utils.py
src/robotframework_zebrunner/api/: client.py  models.py
src/robotframework_zebrunner/tcm/: __init__.py  base.py  test_rail.py  xray.py  zephyr.py
